# tensorflow_tennigakushuu

cat_and_dog/: gazou_bunrui.py  gazoukakuchou.py  pyproject.toml  tenigakushu_to_bichousei.py  tenni_gakushu_2.py  tennigakushu_1.py
cat_and_dog/tests/: test_cat_and_dog.py
tensorboard/v1/train/: events.out.tfevents.1638924604.DESKTOP-4CP8RH8.16432.0.v2  events.out.tfevents.1638924958.DESKTOP-4CP8RH8.16432.2.v2
tensorboard/v1/validation/: events.out.tfevents.1638924631.DESKTOP-4CP8RH8.16432.1.v2  events.out.tfevents.1638924983.DESKTOP-4CP8RH8.16432.3.v2
tensorboard/v2/train/: events.out.tfevents.1638925375.DESKTOP-4CP8RH8.16432.4.v2  events.out.tfevents.1638926035.DESKTOP-4CP8RH8.16432.6.v2
tensorboard/v2/validation/: events.out.tfevents.1638925402.DESKTOP-4CP8RH8.16432.5.v2  events.out.tfevents.1638926075.DESKTOP-4CP8RH8.16432.7.v2
tensorboard/v3/train/: events.out.tfevents.1638926661.DESKTOP-4CP8RH8.16432.8.v2  events.out.tfevents.1638926850.DESKTOP-4CP8RH8.16432.10.v2
tensorboard/v3/validation/: events.out.tfevents.1638926675.DESKTOP-4CP8RH8.16432.9.v2  events.out.tfevents.1638926878.DESKTOP-4CP8RH8.16432.11.v2
tensorboard/v4/train/: events.out.tfevents.1638927208.DESKTOP-4CP8RH8.16432.12.v2  events.out.tfevents.1638928333.DESKTOP-4CP8RH8.16432.14.v2
tensorboard/v4/validation/: events.out.tfevents.1638927283.DESKTOP-4CP8RH8.16432.13.v2  events.out.tfevents.1638928486.DESKTOP-4CP8RH8.16432.15.v2
tensorboard/v5/train/: events.out.tfevents.1638930533.DESKTOP-4CP8RH8.16432.16.v2  events.out.tfevents.1638937113.DESKTOP-4CP8RH8.16432.18.v2
(+4 files in other folders)
