[tool.poetry]
name = "cat_and_dog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "^2.7.0"
matplotlib = "^3.5.0"
scipy = "^1.7.3"
tensorflow-datasets = "^4.4.0"
tf-nightly = "^2.8.0-alpha.20211202"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
